2022-11-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-ebuild-cmd-complete): New function,
	completes multiple ebuild commands. Bug 882053.
	(ebuild-run-command): Call it.
	(ebuild-mode-menu): Add ebuild-run-command without argument.

2022-11-19  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): New commands. Bug 881449.
	(ebuild-mode-map, ebuild-mode-menu): Keybindings and menu entries
	for them.
	(ebuild-mode-pkgdev-commands, ebuild-mode-pkgcheck-commands):
	New variables.
	(ebuild-mode-get-completion-function): New function, split off
	from ebuild-mode-ekeyword-complete.
	(ebuild-mode-ekeyword-complete): Call it.
	(ebuild-mode-command-complete): New function.

2022-11-18  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Fix byte-compile warning
	in XEmacs.

	* ebuild-mode.el (ebuild-mode-collect-and-split): Renamed from
	ebuild-mode-collect-equal-cdrs. Split the car of an element if its
	length is above the limit.
	(ebuild-mode-font-lock-keywords): Split the list of eclass
	keywords here, rather than in keyword-generation.sh.
	* keyword-generation.sh: Don't split the list into parts.
	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass): Updated.

2022-07-31  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Drop unnecessary
	backslash escapes.

	* ebuild-mode.el (ebuild-repo-mode): Set nxml-attribute-indent.

2022-06-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Indent XML with tabs or two
	spaces. Set indent-tabs-mode accordingly.
	(ebuild-mode-xml-indent-tabs): New custom variable.

2022-06-03  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list): Add loong to default.

	* ebuild-mode.el (ebuild-mode-modify-keywords): Use cons rather
	than append when adding a new keyword.

2022-05-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.60 released.
